# A-TOW---SYSTEMS

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
Templates/: clock_statusform.html  clockin.html  conversation.html  create_conversation.html  customertask.html  generic_form.html  genericform_login.html  gps.html  gps_ready.html  homepage.html  index.html  management.html  messages.html  navbar.html  page.html  profile.html  redirectpaypal.html  save_location.html  submit.html  success.html
static/: script.js  style.css
static/assets/css/: styles.css
static/assets/js/: main.js
static/assets/sass/: style.scss
towingapp/: admin.py  apps.py  decorators.py  forms.py  models.py  urls.py  views.py
towingapp/migrations/: 0001_initial.py  0002_auto_20230406_1713.py  0002_auto_20230503_0607.py  0002_receiptpart4_mileage_start.py  0002_remove_clock_in_author.py  0003_auto_20230414_2056.py  0003_clock_in_author.py  0003_coordinates.py  0004_alter_clock_in_author.py  0004_auto_20230418_2252.py  0005_alter_clock_in_author.py  0006_alter_clock_in_author.py  0007_delete_ticket.py  0008_about_category_gallery_home_mensaje_profile_skills.py
towproject/: asgi.py  settings.py  urls.py  wsgi.py
